--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#"><img src="img/h1.png"/>| learn - make - njoy - together</a></h1>
+      <h1><a href="http://blog.learnlabs.in/"><img src="img/h1.png"/>| learn - make - njoy - together</a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
